--- a/src/app/gifs/gifs-page/gifs-page.component.html
+++ b/src/app/gifs/gifs-page/gifs-page.component.html
@@ -1,3 +1,8 @@
+<!-- 
+    El componente principal no tiene funcionalidad alguna ya que 
+    esta se encuentra en los sub módulos por lo que este solo es 
+    un contenedor.
+-->
 <div class="row p-3">
     <div class="col">
         <app-busqueda></app-busqueda>
