--- a/src/app/gifs/resultados/resultados.component.html
+++ b/src/app/gifs/resultados/resultados.component.html
@@ -1,3 +1,10 @@
+<!-- 
+    Angular no solamente tiene control sobre el contenido de los elementos
+    del DOM sino también de sus atributos por lo que al estar encerrados 
+    entre corchetes Angular es capaz de atar los atributos de las etiquetas
+    HTML a propiedades en las clases de Typescript.
+-->
+
 <div class="row">
     <div *ngFor="let gif of resultados" class="col-md-4 col-sm-6 animate__animated animate__fadeIn">
         <div class="card">
