--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,3 +1,16 @@
+<!-- 
+    Angular tiene su propia forma de manipular el DOM a través
+    del archivo ts. Los eventos son declarados en el mismo archivo
+    HTML.
+
+    (click)="buscar(dato)": Al activar el evento click Angular llama
+            a una función buscar presente en el archivo ts.
+    *ngFor="let dato of historial": ng-For es una directiva iterativa
+            que hace que el elemento afectado se multiplique en el DOM
+            y cada elemento tiene acceso al elemento del arreglo que 
+            le corresponde así como sus propiedades.
+-->
+
 <div class="bg-dark border-right p-3" id="sidebar">
     <h3 class="text-light">
         Gifs App
